--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "webpack-dev-server/**/ansi-regex": "^5.0.1",
     "webpack-dev-server/chokidar/glob-parent": "^6.0.1",
     "webpack-dev-server/selfsigned": "^2.0.1",
-    "webpack/**/chokidar/glob-parent": "^6.0.1",
+    "**/chokidar": "^3.5.3",
     "webpack/terser-webpack-plugin/serialize-javascript": "^3.1.0",
     "yo/**/find-versions": "^4.0.0",
     "yo/**/got": "^11.8.5",
@@ -237,8 +237,8 @@
     "terser-webpack-plugin": "^4.1.0",
     "typescript": "4.6.4",
     "url-loader": "^4.1.0",
-    "webpack": "npm:@amoo-miki/webpack@4.46.0-rc.2",
-    "webpack-cli": "^3.3.12",
+    "webpack": "npm:@amoo-miki/webpack@4.46.0-xxhash.1",
+    "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^3.11.0",
     "yeoman-generator": "^5.8.0",
     "yo": "^4.3.1"
